--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc imperdiet facilisis lectus dictum euismod. Quisque eget nisl efficitur, dictum risus et, auctor mauris. Nullam sed sapien condimentum, euismod lectus in, varius ligula. Etiam consequat felis sit amet diam aliquet dictum. Integer lobortis sit amet orci vitae vestibulum. Sed in justo ultrices, pretium felis vel, aliquam neque. Ut id magna id tellus faucibus aliquet. Duis non ornare ante, eu condimentum orci. Duis quis euismod mi, semper dictum sapien. Fusce velit ex, tempus cursus sem rutrum, sodales porta erat. Nulla facilisi. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce a nunc diam. Fusce in dictum magna.</p>
         <p>Integer hendrerit risus at nibh commodo, sit amet viverra libero aliquet. Praesent sagittis nisl a eros egestas, non consectetur urna laoreet. Aenean facilisis sodales quam eget posuere. Fusce luctus porttitor congue. Vestibulum in eros sit amet dui scelerisque mattis a quis tellus. In dictum urna ex, id pharetra nisl ultricies id. Phasellus posuere felis erat, a pretium magna lobortis eget. Nunc tincidunt dignissim diam. Ut quam diam, feugiat facilisis suscipit quis, egestas quis lectus. Nullam et tortor euismod velit viverra commodo. Sed eu luctus dolor, non bibendum mauris. Quisque id lectus eget nisl rhoncus viverra. Ut eu posuere sapien. Nulla condimentum condimentum risus in blandit. Pellentesque eget arcu quis justo posuere ornare ut vel turpis.</p>
         <p>Mauris pharetra eget quam vitae facilisis. Quisque vestibulum placerat ante, et eleifend tortor. Integer nulla dui, volutpat a facilisis sed, ornare nec lacus. Sed id neque pretium, sagittis leo at, cursus est. Sed ante justo, sagittis eget bibendum id, aliquam ut dolor. Vivamus eget vestibulum orci. Aliquam in leo finibus, malesuada ante nec, feugiat dui. Fusce dignissim varius enim, eu dignissim mi laoreet ut. Donec eget magna ullamcorper, porttitor massa eget, pulvinar nulla. Aenean tempor tempus magna, ut lacinia metus molestie id. Vestibulum diam eros, imperdiet rutrum sodales sit amet, dignissim eu sapien.</p>
+
+        <h2>Táblázat</h2>
+        <table>
+            <tr>
+                <th>Első címsor</th>
+                <th>Második címsor</th>
+            </tr>
+        
+            <tr>
+                <td>Első cella</td>
+                <td>Második cella</td>
+            </tr>
+        </table>
+        
+        <img src="cica.jpg" alt="">
     </div>
 </body>
 </html>
